🦄 refactor: Convert from Java 8 to Java 17 for ast expr lit